# compress-video-worker

./: .gitignore  README.md  compress-video-worker.cabal  stack.yaml
osx/: Main.hs
src/: Command.hs  Debug.hs  MainLoop.hs  Progress.hs
test/: Spec.hs
