name:                compress-video-worker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/compress-video-worker#readme
license:             MIT
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2017 Yu Li
category:            Application
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     MainLoop
                       Progress
                       Command
                       Debug
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , process
                     , transformers
                     , filepath
                     , rainbow
                     , unordered-containers
                     , exceptions
                     , utf8-string
  default-language:    Haskell2010

executable compress-video-worker
  hs-source-dirs:      osx
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , compress-video-worker
  default-language:    Haskell2010

test-suite compress-video-worker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compress-video-worker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compress-video-worker
